--- a/Sym.Medicos.Core.WebAPI/Sym.Medicos.Core.API/Sym.Medicos.Core.API.csproj
+++ b/Sym.Medicos.Core.WebAPI/Sym.Medicos.Core.API/Sym.Medicos.Core.API.csproj
@@ -23,4 +23,10 @@
     <ProjectReference Include="..\Sym.Medicos.Core.Repository\Sym.Medicos.Core.Repository.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="config.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
