Refactory de Alguns métodos

--- a/Sym.Medicos.Core.WebAPI/Sym.Medicos.Core.API/Properties/launchSettings.json
+++ b/Sym.Medicos.Core.WebAPI/Sym.Medicos.Core.API/Properties/launchSettings.json
@@ -25,7 +25,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": "true",
-      "applicationUrl": "https://localhost:51751;http://localhost:51752"
+      "applicationUrl": "http://localhost:51750;https://localhost:51751"
     }
   }
 }
